WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75075
Fix debug build with assertions disabled
https://bugs.webkit.org/show_bug.cgi?id=75075
Summary
Fix debug build with assertions disabled
Balazs Kelemen
Reported
2011-12-22 02:27:37 PST
An ASSERT_DISABLED=1 debug build can be useful if you have an assert but you want to debug another issue, or you are interested weather the behaviour is rigth even if the assert fails. So, let's fix the build with in this configuration.
Attachments
Patch
(5.23 KB, patch)
2011-12-22 02:33 PST
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2011-12-22 02:33:04 PST
Created
attachment 120292
[details]
Patch
Balazs Kelemen
Comment 2
2012-01-02 01:23:37 PST
Comment on
attachment 120292
[details]
Patch Landed in
r103570
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug