Fix debug build with assertions disabled https://bugs.webkit.org/show_bug.cgi?id=75075

Reviewed by Darin Adler.

Check whether assertions are disabled instead of NDEBUG
where appropriate to avoid "defined but not used" warnings.

Source/JavaScriptCore:

* wtf/DateMath.cpp:
(WTF::initializeDates):

Source/WebCore:

No change in behaviour so no new tests.

* loader/cache/MemoryCache.cpp:
(WebCore::MemoryCache::insertInLRUList):
(WebCore::MemoryCache::removeFromLiveDecodedResourcesList):
(WebCore::MemoryCache::insertInLiveDecodedResourcesList):
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::layoutBlockChild):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateLayerPositions):

Canonical link: https://commits.webkit.org/91882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103570 268f45cc-cd09-0410-ab3c-d52691b4dbfc