Source/WebCore/loader/cache/MemoryCache.cpp
@@ -486,7 +486,7 @@ void MemoryCache::insertInLRUList(CachedResource* resource)
     if (!resource->m_nextInAllResourcesList)
         list->m_tail = resource;
         
-#ifndef NDEBUG
+#if !ASSERT_DISABLED
     // Verify that we are in now in the list like we should be.
     list = lruListFor(resource);
     bool found = false;
@@ -552,7 +552,7 @@ void MemoryCache::removeFromLiveDecodedResourcesList(CachedResource* resource)
         return;
     resource->m_inLiveDecodedResourcesList = false;
 
-#ifndef NDEBUG
+#if !ASSERT_DISABLED
     // Verify that we are in fact in this list.
     bool found = false;
     for (CachedResource* current = m_liveDecodedResources.m_head; current; current = current->m_nextInLiveResourcesList) {
@@ -598,7 +598,7 @@ void MemoryCache::insertInLiveDecodedResourcesList(CachedResource* resource)
     if (!resource->m_nextInLiveResourcesList)
         m_liveDecodedResources.m_tail = resource;
         
-#ifndef NDEBUG
+#if !ASSERT_DISABLED
     // Verify that we are in now in the list like we should be.
     bool found = false;
     for (CachedResource* current = m_liveDecodedResources.m_head; current; current = current->m_nextInLiveResourcesList) {
